<resources>
    <string name="app_name">NasaDaillyPict</string>
    <string name="Key_URL1">oNxwMOWvUFrohiuAjo0UoBydyoNLN55ebhCfSRGB</string>
    <string name="Site_URL1">planetary/apod</string>
    <string name="BASE_URL1"> https://api.nasa.gov/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Today\'s</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="show_all">Show all</string>
    <string name="show_rent">Rent</string>
    <string name="show_buy">Buy</string>
    <string name="type_rent">Rent</string>
    <string name="type_sale">Sale</string>
    <string name="display_type">For %s</string>
    <string name="display_price_monthly_rental">$%,.0f/month</string>
    <string name="display_price">$%,.0f</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
