<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pagetyler.nasadaillypict.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/actionShowDetail"
            app:destination="@id/detailFragment" />
        <action
            android:id="@+id/action_show_nextPicture"
            app:destination="@id/nextPictureFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.pagetyler.nasadaillypict.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.pagetyler.nasadaillypict.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.pagetyler.nasadaillypict.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.pagetyler.nasadaillypict.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.pagetyler.nasadaillypict.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment

        android:id="@+id/detailFragment"
        android:name="com.pagetyler.nasadaillypict.detail.DetailFragment"
        android:label="DetailFragment"
        tools:layout="@layout/fragment_detail" >
    <argument
        android:name="selectedPicture"
        app:argType="com.pagetyler.nasadaillypict.network.NasaPicture"
        />
    </fragment>
    <fragment
        android:id="@+id/nextPictureFragment"
        android:name="com.pagetyler.nasadaillypict.ui.home.NextPictureFragment"
        android:label="NextPictureFragment"
        tools:layout="@layout/fragment_nextpicture" >

        <action
            android:id="@+id/actionShowNextDetail"
            app:destination="@id/detailFragment" />
    </fragment>


</navigation>